/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "YarnSecurityTestClientAMTokenProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.yarn;

import "yarn_protos.proto";

message ClientToAMTokenIdentifierForTestProto {
  optional ApplicationAttemptIdProto appAttemptId = 1;
  optional string clientName = 2;
  optional string message = 3;
}

message RMDelegationTokenIdentifierForTestProto {
  optional string owner = 1;
  optional string renewer = 2;
  optional string realUser = 3;
  optional int64 issueDate = 4;
  optional int64 maxDate = 5;
  optional int32 sequenceNumber = 6;
  optional int32 masterKeyId = 7 [default = -1];
  optional int64 renewDate = 8;
  optional string message = 9;
}
